# haskell-olhovivo

./: .gitignore  .travis.yml  Makefile  README.md  Web-OlhoVivo-Internal.html  Web-OlhoVivo-TH.html  Web-OlhoVivo.html  doc-index.html  index-frames.html  index.html  mini_Web-OlhoVivo-Internal.html  mini_Web-OlhoVivo-TH.html  mini_Web-OlhoVivo.html  olhovivo.cabal  olhovivo.haddock
.ci/: deploy-documentation.sh
data/: line-codes.txt
lib/Web/: OlhoVivo.hs
lib/Web/OlhoVivo/: Internal.hs  TH.hs
playground/: restclient
src/Web/: OlhoVivo.hs
src/Web/OlhoVivo/: TH.hs~
test/Test/: OlhoVivoMockServer.hs
test/Web/: OlhoVivoSpec.hs
