name:                olhovivo
version:             0.1.0.0
synopsis:            An API wrapper for the SPTrans Olho Vivo API.
-- description:         
homepage:            https://github.com/yamadapc/haskell-olhovivo
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2014 Pedro Tacla Yamada
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Web.OlhoVivo
  build-depends:       aeson
                     , base >=4.7 && <4.8
                     , bytestring
                     , data-default
                     , hspec >= 2.1.2
                     , lens
                     , lens-aeson >= 1.0.0.2
                     , text
                     , wreq >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite hspec
  type:                exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:       aeson
                     , base >=4.7 && <4.8
                     , bytestring
                     , data-default
                     , hspec >=2.1 && <3
                     , lens
                     , lens-aeson >= 1.0.0.2
                     , text
                     , wreq >=0.3 && <0.4
  hs-source-dirs:      src
                     , test
  default-language:    Haskell2010
